<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dejiitaru</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="rest_button">Restaurant</string>

    <!-- Action Bar action items -->
    <string name="action_search">Search</string>
    <string name="action_logOut">Log Out</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
    <!-- Restaurant Items-->
    <string name="action_chart">Chart</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">

        <item ></item>
        <item >Home</item>
        <item >What\'s Hot</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>

    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">

        <item></item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>

    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_restaurant_profile">RestaurantProfileActivity</string>

    <!-- Button text -->
    <string name="google_app_name">G+ Login</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <!--Facebook-->
    <string name="facebook_app_name">Facebook Login :)</string>
    <string name="facebook_app_id">1643524615859918</string>
    <string name="show_detail">Show details</string>
    <string name="share">Share</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tester">TesterActivity</string>

    //Tester Buttons
    <string name="btn_restaurant">Restaurant Activity</string>
    <string name="btn_home">Home Activity</string>
    <string name="btn_facebook">Facbook Activity</string>
    <string name="btn_google">Google Activity</string>


    <string name="btn_intro_login">Login</string>
    <string name="btn_intro_google">Google</string>
    <string name="btn_intro_facebook">Facebook</string>


    <string name="imgdesc">imgdesc</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
