<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom"/>

    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/action_location_found"
        android:showAsAction="ifRoom" />

    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:showAsAction="ifRoom" />

    <!-- Help -->
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        android:showAsAction="never"/>

    <!-- Check updates -->
    <item android:id="@+id/action_check_updates"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_check_updates"
        android:showAsAction="never" />

    <item android:id="@+id/logOut"
        android:onClick="onOptionsItemSelected"
        android:title="@string/action_logOut">
        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:text="@string/btn_logout_from_google"
            android:layout_marginBottom="20dp"/>
    </item>

    <!--  <item android:id="@+id/logOut_facebook"
          android:onClick="onOptionsItemSelected"
          android:title="@string/action_logOut">
          <com.facebook.login.widget.LoginButton
              android:id="@+id/failbook_intro_login"
              android:layout_marginTop="90dp"
              android:layout_width="260dp"
              android:layout_height="37dp"
              android:layout_gravity="center"
              android:layout_marginBottom="20dp"
              android:text="@string/btn_intro_facebook"/>
      </item>-->
</menu>
